<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/scoreDetailLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/scoreDetailTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:text="@string/score_detail"
        android:textSize="20sp"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/playerNameDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:background="@color/city"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_below="@id/scoreDetailTitle"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/playerNameDetail"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/userScoreDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="120sp"
            android:gravity="center"
            android:text="@string/score_place_holder"/>

        <TextView
            android:id="@+id/gameDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="45sp"
            android:paddingBottom="20dp"
            android:paddingTop="60dp"
            android:gravity="center"
            android:layout_below="@+id/userScoreDetail"
            android:text="@string/datePlaceholder"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:text="@string/delete"
            android:textSize="24sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="150dp"
            android:layout_alignParentEnd="true"
            android:text="@string/ok"
            android:textSize="24sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            />
    </RelativeLayout>
</RelativeLayout>