<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@color/city"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/groupName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@color/blue"
        android:textColor="@color/white"
        android:text="@string/group"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <Button
        android:id="@+id/buttonFlight"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="61dp"
        android:text="@string/flight_tracker_stefan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/groupName" />

    <Button
        android:id="@+id/buttonBear"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="61dp"
        android:text="@string/bear_image_daniel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonFlight" />

    <Button
        android:id="@+id/buttonCurrency"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="61dp"
        android:text="@string/currency_converter_huixin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBear" />

    <Button
        android:id="@+id/buttonTrivia"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginTop="61dp"
        android:text="@string/trivia_question_andre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCurrency" />

    <ImageButton
        android:id="@+id/btnLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/btnCredits"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:src="@drawable/baseline_language_blue"
        android:background="@android:color/transparent"
        />

    <ImageButton
        android:id="@+id/btnCredits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        android:src="@drawable/baseline_info_blue"
        android:background="@android:color/transparent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>