<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="33sp"
        android:textAlignment="center"
        android:background="@color/city"
        android:textStyle="bold"
        android:padding="15dp"
        android:text="@string/question_placeholder" />

    <ScrollView
        android:id="@+id/svAnswers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvQuestion"
        android:layout_above="@id/btnTriviaNext">

        <RadioGroup
            android:id="@+id/rgAnswers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbOptionA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:textSize="25sp"
                android:text="@string/optionplaceholder"/>

            <RadioButton
                android:id="@+id/rbOptionB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:textSize="25sp"
                android:text="@string/optionplaceholder"/>

            <RadioButton
                android:id="@+id/rbOptionC"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:textSize="25sp"
                android:text="@string/longanswer"/>

            <RadioButton
                android:id="@+id/rbOptionD"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:textSize="25sp"
                android:text="@string/optionplaceholder"/>

        </RadioGroup>
    </ScrollView>

    <Button
        android:id="@+id/btnTriviaNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:padding="10dp"
        android:layout_alignParentBottom="true"
        android:textSize="25sp"/>

</RelativeLayout>